--- a/issue6/article01/2021-02-25.mdx
+++ b/issue6/article01/2021-02-25.mdx
@@ -1,9 +1,9 @@
 ---
 title: '​Analysis Of Selected Ondo Traditional Songs As Carriers Of Cultural Legacies, ​ Extrapolating Culture From Song Texts'
 slug: analysis-of-selected-ondo-traditional-songs
-description: ''
-authors: []
-tags: []
+description: 'In the light of the aforementioned, this paper seeks to explore Ondo traditional songs as a template towards extrapolating the Ondo people. Anchored on ethnomusicology theory propounded by Nketia (2005, 83), the research used Ondo traditional song repertory, interviews and bibliographic modes of enquiry to achieve its goals.'
+authors: [oluluniyi]
+tags: [traditional African songs, song text analysis, Ondo people]
 ---
 
 # ​Analysis Of Selected Ondo Traditional Songs As Carriers Of Cultural Legacies: ​ Extrapolating Culture From Song Texts
@@ -299,6 +299,10 @@ _________________
 14. Vidal, Tunji. 2009. “Concepts and Practices in African Traditional Music: Unity and Diversity.” _Nigerian Music Review (9&10 ): 1-16_. Print.
 15. Widdess, Richard. 2012. “Music, Meaning and Culture.” _Empirical Musicology Review Vol. 7 (1-2): 88-94_.
 
+</div>
+
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
 </div>
 
 </div>
