add issue5 art3

--- a/issue5/article02/2020-02-24.mdx
+++ b/issue5/article02/2020-02-24.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'The Musical Style of Elliott Carter: the analysis of the Piano Sonata (1945-46)'
+title: 'The Musical Style of Elliott Carter: the analysis of the Piano Sonata (1945-1946)'
 slug: musical-style-of-elliott-carter
 description: 'The purpose of this paper focuses on American composer Elliott Carter and his Piano Sonata (1945-46). Elliot Carter’s Piano Sonata is a representative example of his distinctive modernist style. After his early works written largely in Neoclassical idiom, Carter embarked on a new musical path in this work. His innovative approach to form, harmony, thematic design, metric elements, sound, and timing according to the common sonata structures differ significantly from the traditional approaches to this form.'
 authors: [ywang]
@@ -14,7 +14,7 @@ tags:
   ]
 ---
 
-# The Musical Style of Elliott Carter: the analysis of the Piano Sonata (1945-46)
+# The Musical Style of Elliott Carter: the analysis of the Piano Sonata (1945-1946)
 
 {/* truncate */}
 
@@ -30,7 +30,7 @@ Accepted: Jan 09, 2020
 
 ```
 
-# The Musical Style of Elliott Carter: the analysis of the Piano Sonata (1945-46)
+# The Musical Style of Elliott Carter: the analysis of the Piano Sonata (1945-1946)
 
 export function Name({ author, affil, email }) {
 	return (
@@ -52,7 +52,7 @@ export function Name({ author, affil, email }) {
 
 <div className='abstract'>
 <div className='citation'>
-<strong>Citation:</strong> Wang, Yingying. 2020. "The Musical Style of Elliott Carter The analysis of the Piano Sonata (1945-46)." [_Accelerando: Belgrade Journal of Music and Dance 5:2_](http://localhost:3000/articles/issue8/art)
+<strong>Citation:</strong> Wang, Yingying. 2020. "The Musical Style of Elliott Carter The analysis of the Piano Sonata (1945-1946)." [_Accelerando: Belgrade Journal of Music and Dance 5:2_](http://localhost:3000/articles/issue8/art)
 
 **Acknowledgments**: This paper was the part of Doctoral Treatise at the Florida State University, College Of Music. The Treatise was defended on April 2, 2019. The author expresses her gratitude to the professors and supervisory committee David Kalhous (professor directing treatise), Alice Ann Darrow (University Representative), Diana Dumlavwalla (Committee Member) and Heidi Williams.
 
@@ -172,7 +172,7 @@ Richard Kostelanetz has explained that pandiatonicism "possesses both tonal and 
 			alt='Example 1.1. Prokofiev, Piano Concerto No. 3, First movement, mm. 15-20.'
 		/>
 		<figcaption>
-			**_Example 1.1_** Prokofiev, Piano Concerto No. 3, First movement, mm.
+			**_Example 1.1._** Prokofiev, Piano Concerto No. 3, First movement, mm.
 			15-20.{' '}
 		</figcaption>
 	</figure>
@@ -354,7 +354,7 @@ _Table 2.2_ shows the most commonly used chords in this piece. These chords cont
 <div className='figureBox'>
 
 <table>
-<caption>Table 2.1. Pitch Collection Chords of Interval Set</caption>
+	<caption>Table 2.1. Pitch Collection Chords of Interval Set</caption>
 	<thead>
 		<tr>
 			<th>Three-note Chord</th>
@@ -365,10 +365,19 @@ _Table 2.2_ shows the most commonly used chords in this piece. These chords cont
 	</thead>
 	<tbody>
 		<tr>
-			<td>(0 4 8) <br/ > (0 2 7)  <br/ > (0 1 5 ) <br/ > (0 3 7)</td>
-			<td>(0 1 4 6) <br/ > (0 1 3 7 ) <br/ > (0 2 6 8 )</td>
-			<td>(0 2 4 9 7) <br /> (0 1 4 5 8) <br /> (0 2 3 6 8 ) <br /> (0 1 2 4 7)</td>
-			<td>(0 1 3 5 6 9) <br /> (0 2 4 6 8 10) <br /> (0 1 2 3 6 9) <br /> (0 2 3 4 5 8)</td>
+			<td>
+				(0 4 8) <br /> (0 2 7) <br /> (0 1 5 ) <br /> (0 3 7)
+			</td>
+			<td>
+				(0 1 4 6) <br /> (0 1 3 7 ) <br /> (0 2 6 8 )
+			</td>
+			<td>
+				(0 2 4 9 7) <br /> (0 1 4 5 8) <br /> (0 2 3 6 8 ) <br /> (0 1 2 4 7)
+			</td>
+			<td>
+				(0 1 3 5 6 9) <br /> (0 2 4 6 8 10) <br /> (0 1 2 3 6 9) <br /> (0 2 3 4
+				5 8)
+			</td>
 		</tr>
 	</tbody>
 </table>
@@ -379,7 +388,6 @@ The scorrevole motives mainly consist of fourths, fifths and sixths, while the s
 
 > The articulation of phrases by interval content in Piano Sonata finds parallels in distinctions among the themes of this work, and in Carter’s later music as well. Carter uses unique acoustic qualities and expressive characteristics of various intervals of the chromatic scale to create a contrasting character. This identification of specific intervals with corresponding thematic material is a useful tool when explaining the si1gnificance of the more ambiguous passages of the work. (Perkyns 1990, 39).
 
-
 <div className='figureBox'>
 	<figure className='score'>
 		<img
@@ -387,7 +395,8 @@ The scorrevole motives mainly consist of fourths, fifths and sixths, while the s
 			alt='Example 2.9.  Tonal pitches C – Ab emphasize keys of A# and B, mm. 83-93.'
 		/>
 		<figcaption>
-			**_Example 2.9._**  Tonal pitches C – Ab emphasize keys of A# and B, mm. 83-93.
+			**_Example 2.9._** Tonal pitches C – Ab emphasize keys of A# and B, mm.
+			83-93.
 		</figcaption>
 	</figure>
 </div>
@@ -400,43 +409,38 @@ In this section the descending interval of a third, C to Ab, in the pedal tone i
 			src={require('@site/issue5/article02/ex2-10.png').default}
 			alt='Example 2.10. mm. 60- 64, mm. 77-79'
 		/>
-		<figcaption>
-			**_Example 2.10._**  mm. 60- 64, mm. 77-79
-		</figcaption>
+		<figcaption>**_Example 2.10._** mm. 60- 64, mm. 77-79</figcaption>
 	</figure>
 </div>
 
 As shown by the circled pitches in _Example 2.10_, the successive six-note chords consist of the interval relationships diatonic within Eb. The row could be transposed into its prime form containing the intervals of a third and fourth, minor second and major second, and sixth. The overtone pairs (the fifths B-F#, C#-G#, D#-A#/Bb, F-C, G-D, and A-E) reflect the interval sets shown in Table 2.2, but they are inverted. The pitches in the chords shown in _Example 2.11_ are grouped as five-note (0 2 3 6 8; 0 2 4 9 7) and four-note (0 2 6 8) groups within the 5+5+4 pattern. The resonance of the chords generates a predominant dissonance of collective semitone pairs, B-C, D#-C#, Bb-C, and Eb-F (_Example 2.12_). Carter resolves these interval dissonances by extracting some of them from the enharmonic anticipation (D# into Eb, B# into C, A# into Bb, etc.), which combines with F and G in order to anticipate the next Ab key realm. (Link 1994, 97-99).
 
 <div className='figureGrid'>
-<div className='figureBox'>
-	<figure className='score'>
-		<img
-			src={require('@site/issue5/article02/ex2-11.png').default}
-			alt='Example 2.11.  mm. 65 - 70'
-		/>
-		<figcaption>
-			**_Example 2.11._**  mm. 65 - 70
-		</figcaption>
-	</figure>
-</div>
-<div className='figureBox'>
-	<figure className='score'>
-		<img
-			src={require('@site/issue5/article02/ex2-12.png').default}
-			alt='Example 2.12. Closing (i) and 2nd theme, mm. 80 – 85.'
-		/>
-		<figcaption>
-			**_Example 2.12._** Closing (i) and 2nd theme, mm. 80 – 85.
-		</figcaption>
-	</figure>
-</div>
+	<div className='figureBox'>
+		<figure className='score'>
+			<img
+				src={require('@site/issue5/article02/ex2-11.png').default}
+				alt='Example 2.11.  mm. 65 - 70'
+			/>
+			<figcaption>**_Example 2.11._** mm. 65 - 70</figcaption>
+		</figure>
+	</div>
+	<div className='figureBox'>
+		<figure className='score'>
+			<img
+				src={require('@site/issue5/article02/ex2-12.png').default}
+				alt='Example 2.12. Closing (i) and 2nd theme, mm. 80 – 85.'
+			/>
+			<figcaption>
+				**_Example 2.12._** Closing (i) and 2nd theme, mm. 80 – 85.
+			</figcaption>
+		</figure>
+	</div>
 </div>
 
 ### 1.3. Cadential Gestures
 
 Another striking aspect of the formal organization of the sonata is its cadential gestures. The function of the cadential gestures is to delineate sections. Cadential points in this piece play the important roles of recalling and foreshadowing the formal divisions. In _Example 2.12_, the closing cadence based on the (i) motive in B sonority closes the primary thematic groups in the Exposition. The C octave introduces the secondary theme, and motivic connections and formal schemes are easy to follow due to the gesture of the cadence. _Example 2.13_ shows the (I) cadence located at the end of the Exposition with a B-major chord. This is the first time that the B major chord reveals its identity completely. It contradicts the A-flat key signature.
-
 
 <div className='figureBox'>
 	<figure className='score'>
@@ -445,7 +449,8 @@ Another striking aspect of the formal organization of the sonata is its cadentia
 			alt='Example 2.13. B major chord at the end of the Exposition recalling the (i) motive, mm. 116-125.'
 		/>
 		<figcaption>
-			**_Example 2.13._** B major chord at the end of the Exposition recalling the (i) motive, mm. 116-125.
+			**_Example 2.13._** B major chord at the end of the Exposition recalling
+			the (i) motive, mm. 116-125.
 		</figcaption>
 	</figure>
 </div>
@@ -454,7 +459,6 @@ In her dissertation, Jane E. Gormley Perkyns’s notes how the C major tonality 
 
 > Since the tonality C of the upcoming second theme was already established prior to this passage (m. 102), it seems to have no harmonic function, but pure cadential gesture. The transitional function of this passage, however, is not inherent in its tonality but in its intervallic content. In contrast to the preceding C major material, which features fourths and fifths, this passage introduces the minor third, an interval associated with the upcoming second theme. Thus exposition section takes on an anticipatory role, signaling the approach of the more lyrical second-theme material. Likewise, the use of the third is another element that links this section with the corresponding passage in the development that also follows from material dominated by fourths and fifths. (Perkyns op. cit., 37).
 
-
 <div className='figureBox'>
 	<figure className='score'>
 		<img
@@ -462,7 +466,8 @@ In her dissertation, Jane E. Gormley Perkyns’s notes how the C major tonality 
 			alt='Example 2.14. C-octave reappears in the second half of the secondary theme'
 		/>
 		<figcaption>
-			**_Example 2.14._** C-octave reappears in the second half of the secondary theme, G-C octaves implicating "V-I" "emphatic cadence", mm.100-104.
+			**_Example 2.14._** C-octave reappears in the second half of the secondary
+			theme, G-C octaves implicating "V-I" "emphatic cadence", mm.100-104.
 		</figcaption>
 	</figure>
 </div>
@@ -476,11 +481,11 @@ _Example 2.14_ illustrates another place where Carter uses certain motives in th
 			alt='Example 2.15. inversions function as cadence materials close up exposition'
 		/>
 		<figcaption>
-			**_Example 2.15._** (i) and its inversions function as cadence materials close up exposition, mm. 108 – 11
+			**_Example 2.15._** (i) and its inversions function as cadence materials
+			close up exposition, mm. 108 – 11
 		</figcaption>
 	</figure>
 </div>
-
 
 ## Part 2. Movement II
 
@@ -497,13 +502,13 @@ The descending line in the left hand presents a distinct lyrical melody and expa
 			alt='Example 2.16. Opening chordal melody in D Major expands over ostinato in B section in Db Major, mm. 1-6, mm. 33-36.'
 		/>
 		<figcaption>
-			**_Example 2.16._** Opening chordal melody in D Major expands over ostinato in B section in Db Major, mm. 1-6, mm. 33-36.
+			**_Example 2.16._** Opening chordal melody in D Major expands over
+			ostinato in B section in Db Major, mm. 1-6, mm. 33-36.
 		</figcaption>
 	</figure>
 </div>
 
 Unlike the upward motion of the overtone series in the first movement, the line in the second movement is descending. The descending bass begins at m. 33 on Eb2, and its underlying chromatic motion is initiated by the lowest note of the octave (_Example 2.17_).
-
 
 <div className='figureBox'>
 	<figure className='score'>
@@ -512,7 +517,8 @@ Unlike the upward motion of the overtone series in the first movement, the line 
 			alt='Example 2.17. Long-range linear progression in the bass line, mm. 33-56.'
 		/>
 		<figcaption>
-			**_Example 2.17._** Long-range linear progression in the bass line, mm. 33-56.
+			**_Example 2.17._** Long-range linear progression in the bass line, mm.
+			33-56.
 		</figcaption>
 	</figure>
 </div>
@@ -528,7 +534,8 @@ The second part of the movement is interrupted by the Misterioso introduction pr
 			alt='Example 2.18. Dyad in D Major in transition to Misterioso anticipates Db Major.'
 		/>
 		<figcaption>
-			**_Example 2.18._** Dyad in D Major in transition to Misterioso anticipates Db Major
+			**_Example 2.18._** Dyad in D Major in transition to Misterioso
+			anticipates Db Major
 		</figcaption>
 	</figure>
 </div>
@@ -564,16 +571,14 @@ After a surge of intervallic transpositions, the fugue subject finally enters in
 </div>
 
 <div className='figureBox'>
-		<figcaption>
-			**_Table 2.2._** Structure of Fugue
-		</figcaption>
+	<figcaption>**_Table 2.2._** Structure of Fugue</figcaption>
 	<figure>
 		<img
 			src={require('@site/issue5/article02/table2-2.png').default}
 			alt='Table 2.2. Structure of Fugue'
 		/>
 	</figure>
-  <span></span>
+	<span></span>
 </div>
 
 After the first episode, the middle entry restates the subject in B major, which is the first time the fugue underscores the pandiatonic relationship of the D-flat tonal area juxtaposed with the B tonal area (refer to _Table 2.2_). It is followed by the inverted answer at m. 142, but this answer is in C Major. The second middle entry comes at m. 149, where the subject is stated in all four voices in stretto (refer to _Table 2.2_). The "correct" real answer in B major enters at m. 177, as if postponed after the C major answer (_Example 2.21_). Also, only the head of the answer is stated, and the subject comes after the answer at m. 181. The order is reversed.
@@ -589,7 +594,6 @@ After the first episode, the middle entry restates the subject in B major, which
 		</figcaption>
 	</figure>
 </div>
-
 
 The stretto interplay on the subject increases the intensity of the fugue. The texture becomes more dense, and managing the beat in the metric unit for each voice becomes more complicated. Its arcane contrapuntal effect creates accentuation on different beats in a manner similar that recalls medieval isorhythmic technique. (Haberkorn 1979, 93).
 
@@ -648,7 +652,8 @@ The application of the reverse exposition is another unconventional aspect of th
 			alt='Example 2.24. Reverse exposition, voices move simultaneously, mm. 272 – 275.'
 		/>
 		<figcaption>
-			**_Example 2.24._** Reverse exposition, voices move simultaneously, mm. 272 – 275.
+			**_Example 2.24._** Reverse exposition, voices move simultaneously, mm.
+			272 – 275.
 		</figcaption>
 	</figure>
 </div>
@@ -692,19 +697,64 @@ After the fugue, the opening material from the second movement returns; however,
 			alt='Example 2.27. Climax of the cantilena, lowest Bb to the highest B, mm. 358-361.'
 		/>
 		<figcaption>
-			**_Example 2.27._** Climax of the cantilena, lowest Bb to the highest B, mm. 358-361.
+			**_Example 2.27._** Climax of the cantilena, lowest Bb to the highest B,
+			mm. 358-361.
 		</figcaption>
 	</figure>
 </div>
 
-
 Charles Rosen (1984) commented on Carter’s ability to explore the full range of the piano’s registers. The grand sonority of the piano is employed by Carter’s complicated arrangement of the arabesque lines through a multi-voice texture. According to Rosen:
 
-> The creation of expressive arabesque lines that reach eloquently from bass to treble, covering almost the entire musical space with an irregular and seemingly improvisatory continuity of developing metrical structure in Carter’s music. This is found most often and best in piano music, as it typically needs a unified tone color from the lowest bass to the highest treble to achieve its full effect (Rosen 1984, 54).
+> The creation of expressive arabesque lines that reach eloquently from bass to treble, covering almost the entire musical space with an irregular and seemingly improvisatory continuity of developing metrical structure in Carter’s music. This is found most often and best in piano music, as it typically needs a unified tone color from the lowest bass to the highest treble to achieve its full effect. (Rosen 1984, 54).
 
-The epilogue (mm. 393-414) fuses the main thematic ideas from both movements and brings an end to the sonata. The motivic material of the epilogue is derived from (a), (d) and (e). Before landing on B, the final resolution brings into focus the juxtaposition of the keys of B and Bb for the last time. The final chord contains three B octaves and the full F# chord in the key of A# (Example 2.28), followed by the strong reiteration of the D#-F# dyad, recalling the third at m. 361 (Example 2.27).
+The epilogue (mm. 393-414) fuses the main thematic ideas from both movements and brings an end to the sonata. The motivic material of the epilogue is derived from (a), (d) and (e). Before landing on B, the final resolution brings into focus the juxtaposition of the keys of B and Bb for the last time. The final chord contains three B octaves and the full F# chord in the key of A# (_Example 2.28)_, followed by the strong reiteration of the D#-F# dyad, recalling the third at m. 361 (_Example 2.27_).
 
+<div className='figureBox'>
+	<figure className='score'>
+		<img
+			src={require('@site/issue5/article02/ex2-28.png').default}
+			alt='Example 2.28. Last chord ends on B, superimposed with A# key, mm. 404-414.'
+		/>
+		<figcaption>
+			**_Example 2.28._** Last chord ends on B, superimposed with A# key, mm.
+			404-414.
+		</figcaption>
+	</figure>
+</div>
 
+---
 
+## Conclusion
+
+Elliot Carter’s 1945 Piano Sonata is a representative example of his distinctive modernist style. Carter’s new approach to the sonata form is revealed in this work.
+
+As shown in the discussion above, the most important innovative feature in the first movement is the treatment of thematic development and the use of pandiatonicism. Rather than employing thematic ideas that develop over the course of the sonata form, Carter introduces short, fragmental motivic cells in the opening statement of the Sonata that serve as the essential building blocks, unifying the work. It avoids the use of traditional harmony; the introduction of pandiatonicism allows the work to move seamlessly and effortlessly from one key to another without losing the sense of tonal center. Other innovative aspects include the linear chromatic progression in the second movement and the use of cross-accented counterpoint and the reverse exposition in the fugal movement.
+
+Carter was fascinated by the idea of using various intervallic relationships to separate and unify different thematic groups and sections. Rather than embracing atonality, he collected and combined pitches based on their intervallic relationships. While undoubtedly influenced by the dodecaphonic technique, he found a way in the Piano Sonata a way to retain and enrich the tonal language under the umbrella of sonata form. With this work, Carter left his neoclassical period behind and embarked on new compositional adventures.
+
+---
+
+## References
+
+<div className='references'>
+
+1. Bernard, Jonathan W. 2003. _Elliott Carter: Collected Essays and Lectures, 1937-1995_. University of Rochester Press.
+2. Boulez, Pierre. 1991. Translated by Stephen Walsh as _Stocktakings from an Apprenticeship_. Oxford: Clarendon.
+3. Carter, Elliott. 1982. _Piano Sonata (1945-46)_. New York: Mercury Music.
+4. Carter, Elliot and Enzo Restagno. 1991. "Elliott Carter: In _Conversation with Enzo Restagno for Settembre Musica 1989_." Translated by Katherine Silberblatt Wolfthal. New York: Brooklyn College of the City University of New York.
+5. Haberkorn, Michael H. 1979. "A Study and Performance of the Piano Sonatas of Samuel Barber, Elliott Carter, and Aaron Copland." PhD. diss. Columbia University Teachers College.
+6. Kostelanetz, Richard. 2013. _A Dictionary of the Avant-Gardes_. London and New York: Routledge.
+7. Link, John. 1994. "Long-Range Polyrhythms in Elliott Carter’s Recent Music." PhD. diss. City University of New York.
+8. Meyer, Felix, and Anne C. Shreffler. 2008. _Elliott Carter: A Centennial Portrait in Letters and Documents_. Suffolk: The Boydell Press Woodbridge.
+9. Perkyns, Jane E. Gormley. 1990. "An Analytical Study of Elliott Carter’s Piano Sonata." D.M. diss. The University of British Columbia.
+10. Rosen, Charles. 1984. _The Musical Languages of Elliott Carter_. Washington, D. C.: Library of Congress.
+11. Schiff, David. 1998. _The Music of Elliott Carter_. New York: Cornell University Press.
+12. Slonimsky, Nicolas. 1938. _Music since 1900. 2nd edition_. New York: W. W. Norton.
+
+</div>
+
+<div className='up'>
+	<a href='#top'>![Back to top](../up.png)</a>
+</div>
 
 </div>
