--- a/issue5/article04/2020-02-22.mdx
+++ b/issue5/article04/2020-02-22.mdx
@@ -77,7 +77,11 @@ export function Name({ author, affil, email }) {
 		portable instrument.
 		<div>
 			<strong>Keywords:</strong>
-			<i> guitar, guitarist, composers, arrangers, idiomatic guitar writing</i>
+			<i> 
+      {' '}
+      guitar, guitarist, composers, arrangers, idiomatic guitar writing
+      
+      </i>
 		</div>
 	</div>
 </div>
