--- a/issue4/article01/2019-02-25.mdx
+++ b/issue4/article01/2019-02-25.mdx
@@ -222,7 +222,7 @@ Taking into account that music can fulfill a multiplicity of the functions in th
 31. Norton A., E. Winner, K. Cronin, K. Overy, J. Lee D., and G. Schlaug. 2005. "Are there pre-existing neural, cognitive, or motoric markers for musical ability?" _Brain Cogn. 59(2): 124–134_. Published online 2005 Jul 28. doi: 10.1016/j.bandc.2005.05.009
 32. O'Neill, S. 1997a. "Gender and Music." In The social psychology of music. Edited by D. J. Hargreaves and A. C. North. 46-60, Oxford: Oxford University Press.
 33. O'Neill, S. 2002. "The self-identity of young musicians." In _Musical identities_. Edited by R. A. R. MacDonald, D. J. Hargreaves and D. Miell. 79-96. Oxford: Oxford University Press.
-34. Roe, K. 1999. "Music and identity among European youth: music as communication soundscape info." _Journal on Media Culture 2_. [link]
+34. Roe, K. 1999. "Music and identity among European youth: music as communication soundscape info." _Journal on Media Culture 2_. [icce](http://www.icce.rug.nl/~soundscapes/DATABASES/MIE/Part2_chapter03.shtml)
 35. Sawyer, R. K. 1992. "Improvisational creativity: an analysis of jazz performance." _Creativity Research Journal 5 (3): 253-263_.
 36. Sawyer, R. K. 2003. _Group creativity: Music, theater, collaboration_. Mahwah, NJ, US: Lawrence Erlbaum Associates Publishers.
 37. Schaefer, H. E. 2017. "Music-Evoked Emotions - Current Studies." _Frontiers in neuroscience 11: 600_. doi:10.3389/fnins.2017.00600
